made the position to be fixed and removed z-index
FNB Super_Hero_App project

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ nav{
     font-weight: bolder;
     height: 30px;
     padding-top: 10px;
-    z-index: 999;
+    width: 100%;
+    position: fixed;
 }
 .font{
     color: white;
